Rotate the car via CSS to the direction that the user inputted #2

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-  <img class="car" src="images/f1.svg">
+  <img class="car turn-right" src="images/f1.svg">
+  <script src="data.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
