--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-  <img class="car turn-right" src="images/f1.svg">
+  <img class="car turn-right" src="images/turtle.png">
   <script src="data.js"></script>
   <script src="main.js"></script>
 </body>
